Renamed text usages from "Openroleplay.ai" to "ThetaSpaces1"

--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -1,4 +1,4 @@
-# Welcome to Openroleplay.ai!
+# Welcome to ThetaSpaces1!
 
 At Open Roleplay, we're dedicated to democratizing AI companionship, offering a platform for creating AI characters and engaging in roleplaying adventures with complete control over your data, models, and characters. Our aim is to craft a space where interactions with AI friends and the exploration of fantasies become routine, all powered by cutting-edge AI technology.
 
