--- a/apps/web/public/locales/ar.json
+++ b/apps/web/public/locales/ar.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "مرحبا بكم في Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "مرحبا بكم في ThetaSpaces1",
   "opensource ai characters": "أحرف تايلندية مفتوحة المصدر",
   "alpha": "ألفا",
   "Create": "إنشاء",
