--- a/apps/web/public/locales/cs.json
+++ b/apps/web/public/locales/cs.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Vítejte v Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Vítejte v ThetaSpaces1",
   "opensource ai characters": "opensource znaky ai",
   "alpha": "alfa",
   "Create": "Vytvořit",
