--- a/apps/web/public/locales/de.json
+++ b/apps/web/public/locales/de.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Willkommen bei Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Willkommen bei ThetaSpaces1",
   "opensource ai characters": "opensource ai Zeichen",
   "alpha": "alpha",
   "Create": "Anlegen",
