--- a/apps/web/public/locales/el.json
+++ b/apps/web/public/locales/el.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Καλώς ήρθατε στο Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Καλώς ήρθατε στο ThetaSpaces1",
   "opensource ai characters": "opensource ai χαρακτήρες",
   "alpha": "άλφα",
   "Create": "Δημιουργία",
