--- a/apps/web/public/locales/es.json
+++ b/apps/web/public/locales/es.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Bienvenido a Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Bienvenido a ThetaSpaces1",
   "opensource ai characters": "caracteres ai de código abierto",
   "alpha": "alfa",
   "Create": "Crear",
