--- a/apps/web/public/locales/fr.json
+++ b/apps/web/public/locales/fr.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Bienvenue sur Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Bienvenue sur ThetaSpaces1",
   "opensource ai characters": "caractères ai opensource",
   "alpha": "alpha",
   "Create": "Créer",
