--- a/apps/web/public/locales/it.json
+++ b/apps/web/public/locales/it.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Benvenuto in Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Benvenuto in ThetaSpaces1",
   "opensource ai characters": "caratteri opensource ai",
   "alpha": "alfa",
   "Create": "Crea",
