--- a/apps/web/public/locales/ja.json
+++ b/apps/web/public/locales/ja.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Openroleplay.aiへようこそ",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "ThetaSpaces1へようこそ",
   "opensource ai characters": "オープンソースAIキャラクター",
   "alpha": "アルファ",
   "Create": "作成",
