--- a/apps/web/public/locales/ko.json
+++ b/apps/web/public/locales/ko.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Openroleplay.ai에 오신 것을 환영합니다.",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "ThetaSpaces1에 오신 것을 환영합니다.",
   "opensource ai characters": "오픈소스 AI 캐릭터",
   "alpha": "알파",
   "Create": "만들기",
