--- a/apps/web/public/locales/no.json
+++ b/apps/web/public/locales/no.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Velkommen til Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Velkommen til ThetaSpaces1",
   "opensource ai characters": "opensource ai tegn",
   "alpha": "alpha",
   "Create": "Opprett",
