--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Добро пожаловать в Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Добро пожаловать в ThetaSpaces1",
   "opensource ai characters": "открытые персонажи",
   "alpha": "альфа",
   "Create": "Создать",
