--- a/apps/web/public/locales/sv.json
+++ b/apps/web/public/locales/sv.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Välkommen till Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Välkommen till ThetaSpaces1",
   "opensource ai characters": "Opensource ai tecken",
   "alpha": "alfa",
   "Create": "Skapa",
