--- a/apps/web/public/locales/uk.json
+++ b/apps/web/public/locales/uk.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "OpenrolePlay.ai",
-  "Welcome to Openroleplay.ai": "Ласкаво просимо в Openroleplay.ai",
+  "ThetaSpaces1": "OpenrolePlay.ai",
+  "Welcome to ThetaSpaces1": "Ласкаво просимо в ThetaSpaces1",
   "opensource ai characters": "символів відкритим початковим кодом",
   "alpha": "альфа",
   "Create": "Створити",
