--- a/apps/web/public/locales/fi.json
+++ b/apps/web/public/locales/fi.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Tervetuloa Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Tervetuloa ThetaSpaces1",
   "opensource ai characters": "opensource ai merkkiä",
   "alpha": "alfa",
   "Create": "Luo",
