--- a/apps/web/public/locales/nl.json
+++ b/apps/web/public/locales/nl.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Welkom bij Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Welkom bij ThetaSpaces1",
   "opensource ai characters": "opensource ai tekens",
   "alpha": "alfabetisch",
   "Create": "Aanmaken",
