--- a/apps/web/public/locales/pl.json
+++ b/apps/web/public/locales/pl.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Witamy w Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Witamy w ThetaSpaces1",
   "opensource ai characters": "znaki z opensource",
   "alpha": "alfa",
   "Create": "Utwórz",
