--- a/apps/web/public/locales/pt.json
+++ b/apps/web/public/locales/pt.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Bem-vindo ao Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Bem-vindo ao ThetaSpaces1",
   "opensource ai characters": "caracteres do código-fonte ai",
   "alpha": "Alfa",
   "Create": "Crio",
