--- a/apps/web/public/locales/ro.json
+++ b/apps/web/public/locales/ro.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Bun venit la Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Bun venit la ThetaSpaces1",
   "opensource ai characters": "Caractere opensource ai",
   "alpha": "alfa",
   "Create": "Crează",
