--- a/apps/web/public/locales/tr.json
+++ b/apps/web/public/locales/tr.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "Welcome to Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "Welcome to ThetaSpaces1",
   "opensource ai characters": "opensource ai characters",
   "alpha": "alpha",
   "Create": "Create",
