--- a/apps/web/public/locales/zh.json
+++ b/apps/web/public/locales/zh.json
@@ -1,6 +1,6 @@
 {
-  "Openroleplay.ai": "Openroleplay.ai",
-  "Welcome to Openroleplay.ai": "欢迎使用 Openroleplay.ai",
+  "ThetaSpaces1": "ThetaSpaces1",
+  "Welcome to ThetaSpaces1": "欢迎使用 ThetaSpaces1",
   "opensource ai characters": "开源 AI 角色",
   "alpha": "阿尔法",
   "Create": "创建",
