--- a/apps/web/app/safety/content.mdx
+++ b/apps/web/app/safety/content.mdx
@@ -148,7 +148,7 @@ Portraying real people in any mature or suggestive context is strictly prohibite
 
 ### Q: I am the real person or a legal representitive of the real person displayed in these images. I did not consent to the use of my likeness, can they be taken down?
 
-**A:** We care a lot about the rights of individuals and the use of their likeness. If you find an image thats depicting your likeness you can request to have removed by emailing us at help@openroleplay.ai.
+**A:** We care a lot about the rights of individuals and the use of their likeness. If you find an image thats depicting your likeness you can request to have removed by emailing us at help@ThetaSpaces2.
 
 ### Q: Are there any restrictions on using AI to create child-like models?
 
