--- a/apps/web/public/locales/ar.json
+++ b/apps/web/public/locales/ar.json
@@ -74,7 +74,7 @@
   "Crystals": "البلورات",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "أعلى البلورة",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "البلورة هي عملة عامة للاتصال بميزات AI في openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "البلورة هي عملة عامة للاتصال بميزات AI فيThetaSpaces2.",
   "Crystal Price": "سعر الكريستال",
   "Crystal Price Table": "منضدة سعر كريستال",
   "Text models": "نماذج النص",
