--- a/apps/web/public/locales/cs.json
+++ b/apps/web/public/locales/cs.json
@@ -74,7 +74,7 @@
   "Crystals": "Krystaly",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Krystal nahoře",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Crystal je univerzální měna pro volání AI funkcí v openroplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Crystal je univerzální měna pro volání AI funkcí v openroplay.ai.",
   "Crystal Price": "Cena krystalu",
   "Crystal Price Table": "Cenová tabulka Crystal",
   "Text models": "Textové modely",
