--- a/apps/web/public/locales/da.json
+++ b/apps/web/public/locales/da.json
@@ -74,7 +74,7 @@
   "Crystals": "Krystaller",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Krystal Top-Up",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Crystal er en universel valuta for at kalde AI funktioner i openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Crystal er en universel valuta for at kalde AI funktioner iThetaSpaces2.",
   "Crystal Price": "Krystal Pris",
   "Crystal Price Table": "Krystal Pris Tabel",
   "Text models": "Tekst modeller",
