--- a/apps/web/public/locales/de.json
+++ b/apps/web/public/locales/de.json
@@ -74,7 +74,7 @@
   "Crystals": "Kristalle",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Kristall Top-Up",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Crystal ist eine universelle Währung für den Aufruf von AI-Funktionen in openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Crystal ist eine universelle Währung für den Aufruf von AI-Funktionen inThetaSpaces2.",
   "Crystal Price": "Kristallpreis",
   "Crystal Price Table": "Kristallpreistabelle",
   "Text models": "Textmodelle",
