--- a/apps/web/public/locales/el.json
+++ b/apps/web/public/locales/el.json
@@ -74,7 +74,7 @@
   "Crystals": "Κρύσταλλοι",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Ανανέωση Κρυστάλλου",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Crystal είναι ένα καθολικό νόμισμα για την κλήση AI χαρακτηριστικά σε openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Crystal είναι ένα καθολικό νόμισμα για την κλήση AI χαρακτηριστικά σεThetaSpaces2.",
   "Crystal Price": "Τιμή Κρύσταλλο",
   "Crystal Price Table": "Τραπέζι Τιμών Κρύσταλλο",
   "Text models": "Μοντέλα κειμένου",
