--- a/apps/web/public/locales/es.json
+++ b/apps/web/public/locales/es.json
@@ -74,7 +74,7 @@
   "Crystals": "Cristales",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Cristal arriba",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Cristal es una moneda universal para llamar a funciones de IA en openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Cristal es una moneda universal para llamar a funciones de IA enThetaSpaces2.",
   "Crystal Price": "Precio del cristal",
   "Crystal Price Table": "Tabla de precios del cristal",
   "Text models": "Modelos de texto",
