--- a/apps/web/public/locales/fi.json
+++ b/apps/web/public/locales/fi.json
@@ -74,7 +74,7 @@
   "Crystals": "Kiteet",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Kristalli Ylös",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Crystal on universaali valuutta soittaa tekoälyn ominaisuuksia openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Crystal on universaali valuutta soittaa tekoälyn ominaisuuksiaThetaSpaces2.",
   "Crystal Price": "Kristallin Hinta",
   "Crystal Price Table": "Kristallin Hintataulukko",
   "Text models": "Tekstin mallit",
