--- a/apps/web/public/locales/fr.json
+++ b/apps/web/public/locales/fr.json
@@ -74,7 +74,7 @@
   "Crystals": "Cristaux",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Recharge du Cristal",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Crystal est une monnaie universelle pour appeler les fonctionnalités AI dans openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Crystal est une monnaie universelle pour appeler les fonctionnalités AI dansThetaSpaces2.",
   "Crystal Price": "Prix du cristal",
   "Crystal Price Table": "Tableau de prix en cristal",
   "Text models": "Modèles de texte",
