--- a/apps/web/public/locales/it.json
+++ b/apps/web/public/locales/it.json
@@ -74,7 +74,7 @@
   "Crystals": "Cristalli",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Ricarica Cristallo",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Crystal è una valuta universale per chiamare funzioni AI in openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Crystal è una valuta universale per chiamare funzioni AI inThetaSpaces2.",
   "Crystal Price": "Prezzo Cristallo",
   "Crystal Price Table": "Tabella Prezzo Cristallo",
   "Text models": "Modelli di testo",
