--- a/apps/web/public/locales/ja.json
+++ b/apps/web/public/locales/ja.json
@@ -74,7 +74,7 @@
   "Crystals": "クリスタル",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "クリスタルチャージ",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "クリスタルは、openroleplay.aiでAI機能を呼び出すための普遍的な通貨です。",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "クリスタルは、openroleplay.aiでAI機能を呼び出すための普遍的な通貨です。",
   "Crystal Price": "クリスタル価格",
   "Crystal Price Table": "クリスタル価格表",
   "Text models": "テキストモデル",
