--- a/apps/web/public/locales/ko.json
+++ b/apps/web/public/locales/ko.json
@@ -74,7 +74,7 @@
   "Crystals": "크리스탈",
   "Get Crystals": "크리스탈 얻기",
   "Crystal Top-Up": "크리스탈 충전",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "크리스탈은 openroleplay.ai에서 AI 기능을 호출하기 위한 범용 통화입니다.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "크리스탈은ThetaSpaces2에서 AI 기능을 호출하기 위한 범용 통화입니다.",
   "Crystal Price": "크리스탈 가격",
   "Crystal Price Table": "크리스탈 가격표",
   "Text models": "텍스트 모델",
