--- a/apps/web/public/locales/nl.json
+++ b/apps/web/public/locales/nl.json
@@ -74,7 +74,7 @@
   "Crystals": "Kristallen",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Kristal Top-Up",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Crystal is een universele valuta voor het aanroepen van AI functies in openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Crystal is een universele valuta voor het aanroepen van AI functies inThetaSpaces2.",
   "Crystal Price": "Kristallen prijs",
   "Crystal Price Table": "Kristallen prijstabel",
   "Text models": "Tekst modellen",
