--- a/apps/web/public/locales/no.json
+++ b/apps/web/public/locales/no.json
@@ -74,7 +74,7 @@
   "Crystals": "Krystaller",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Krystall Øverst",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Krystall er en universell valuta for å kalle AI funksjoner i openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Krystall er en universell valuta for å kalle AI funksjoner iThetaSpaces2.",
   "Crystal Price": "Krystall pris",
   "Crystal Price Table": "Krystall pris tabell",
   "Text models": "Tekst modeller",
