--- a/apps/web/public/locales/pl.json
+++ b/apps/web/public/locales/pl.json
@@ -74,7 +74,7 @@
   "Crystals": "Kryształy",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Kryształowy top-Up",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Kryształ jest uniwersalną walutą do wywoływania funkcji AI w openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Kryształ jest uniwersalną walutą do wywoływania funkcji AI wThetaSpaces2.",
   "Crystal Price": "Kryształowa Cena",
   "Crystal Price Table": "Tablica cen kryształów",
   "Text models": "Modele tekstowe",
