--- a/apps/web/public/locales/pt.json
+++ b/apps/web/public/locales/pt.json
@@ -74,7 +74,7 @@
   "Crystals": "Cristais",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Recarga Cristalina",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "O Cristal é uma moeda universal para chamar características de IA no openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "O Cristal é uma moeda universal para chamar características de IA noThetaSpaces2.",
   "Crystal Price": "Preço de Cristal",
   "Crystal Price Table": "Tabela de preço cristalino",
   "Text models": "Modelos de texto",
