--- a/apps/web/public/locales/ro.json
+++ b/apps/web/public/locales/ro.json
@@ -74,7 +74,7 @@
   "Crystals": "Cristale",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Deasupra cristalului",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Cristalul este o monedă universală pentru a numi caracteristici AI în openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Cristalul este o monedă universală pentru a numi caracteristici AI înThetaSpaces2.",
   "Crystal Price": "Preț cristal",
   "Crystal Price Table": "Tabel Preț Cristal",
   "Text models": "Modele text",
