--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -74,7 +74,7 @@
   "Crystals": "Кристаллы",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Кристалл сверху",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Crystal - это универсальная валюта для вызова AI функций openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Crystal - это универсальная валюта для вызова AI функцийThetaSpaces2.",
   "Crystal Price": "Цена кристалла",
   "Crystal Price Table": "Таблица цен на кристаллы",
   "Text models": "Модели текста",
