--- a/apps/web/public/locales/sv.json
+++ b/apps/web/public/locales/sv.json
@@ -74,7 +74,7 @@
   "Crystals": "Kristaller",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Kristall påfyllning",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Crystal är en universell valuta för att kalla AI funktioner i openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Crystal är en universell valuta för att kalla AI funktioner iThetaSpaces2.",
   "Crystal Price": "Kristall Pris",
   "Crystal Price Table": "Kristall pristabell",
   "Text models": "Text-modeller",
