--- a/apps/web/public/locales/uk.json
+++ b/apps/web/public/locales/uk.json
@@ -74,7 +74,7 @@
   "Crystals": "Кристали",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Кристал зверху вгору",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Кристал - це універсальна валюта для виклику функцій AI в openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Кристал - це універсальна валюта для виклику функцій AI вThetaSpaces2.",
   "Crystal Price": "Кристал ціна",
   "Crystal Price Table": "Кристал прейскуранта",
   "Text models": "Текстові моделі",
