--- a/apps/web/public/locales/zh.json
+++ b/apps/web/public/locales/zh.json
@@ -74,7 +74,7 @@
   "Crystals": "水晶体",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "水晶充值",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Crystal 是通用货币在 openroleplay.ai 中调用 AI 功能。",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Crystal 是通用货币在ThetaSpaces2 中调用 AI 功能。",
   "Crystal Price": "水晶价格",
   "Crystal Price Table": "水晶价格表",
   "Text models": "文本模型",
