--- a/apps/web/public/locales/en.json
+++ b/apps/web/public/locales/en.json
@@ -74,7 +74,7 @@
   "Crystals": "Crystals",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Crystal Top-Up",
-  "Crystal is an universal currency for calling AI features in openroleplay.ai.": "Crystal is an universal currency for calling AI features in openroleplay.ai.",
+  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Crystal is an universal currency for calling AI features inThetaSpaces2.",
   "Crystal Price": "Crystal Price",
   "Crystal Price Table": "Crystal Price Table",
   "Text models": "Text models",
