Change to "ThetaSpaces2"

--- a/apps/web/app/safety/content.mdx
+++ b/apps/web/app/safety/content.mdx
@@ -6,7 +6,7 @@ import {
 
 # Safety
 
-At OpenRoleplay.ai, we recognize the power of AI and are committed to using it responsibly. We have clear rules to protect children, respect people's privacy, and prevent harmful or illegal content.
+At ThetaSpaces2, we recognize the power of AI and are committed to using it responsibly. We have clear rules to protect children, respect people's privacy, and prevent harmful or illegal content.
 
 Our goal is to let people be creative and use AI in new ways, but we must also keep vulnerable groups safe. It's against our rules to make photorealistic images of children or show extreme or illegal things. We also don't allow people to use our AI to make content that is violent, hateful, or disrespectful.
 
