Change domain name to www.thetaspace.fun

--- a/apps/docs/pages/images.mdx
+++ b/apps/docs/pages/images.mdx
@@ -1,6 +1,6 @@
 # Generate images
 
-[Generate high-quality, detailed images for your character cards.](https://openroleplay.ai/images)
+[Generate high-quality, detailed images for your character cards.](https://www.thetaspace.fun/images)
 
 ## How Stable Diffusion Models Work
 
