Change text from "Openroleplay" to "ThetaSpace"

--- a/apps/docs/pages/community_guidelines.mdx
+++ b/apps/docs/pages/community_guidelines.mdx
@@ -1,6 +1,6 @@
 # 👐 Community Guidelines
 
-At Openroleplay.AI, our goal is to make a friendly and secure space where users can have enjoyable, interesting, and creative interactions with virtual characters. We ask everyone to follow these rules to help us achieve this.
+At ThetaSpace.AI, our goal is to make a friendly and secure space where users can have enjoyable, interesting, and creative interactions with virtual characters. We ask everyone to follow these rules to help us achieve this.
 
 ## 1. Age Requirement
 
@@ -50,7 +50,7 @@ Edited photographs of real individuals, especially in defamatory contexts, are n
 - **Respect and Responsibility:** Users are accountable for their character interactions. Characters should respect boundaries and avoid harm.
 - **Prohibited Pornographic Content:** Any pornographic content exhibiting photorealism, to the extent that it cannot be easily distinguished from actual photographic imagery of real human individuals, is strictly prohibited. This rule applies irrespective of the method of creation, encompassing AI-generated and computer-simulated pornography.
 - **Original Characters (OCs):** Users are advised against using Original Characters (OCs) from other platforms without the original creator's permission. We prioritize creators' rights and will take prompt action on any content that infringes on these rights if reported.
-- **Incestuous Scenarios:** Scenarios, role-plays, or discussions that depict or imply incestuous relationships, including those between blood-related family members, are strictly prohibited on Openroleplay. This includes any content that directly or indirectly references incestuous relationships.
+- **Incestuous Scenarios:** Scenarios, role-plays, or discussions that depict or imply incestuous relationships, including those between blood-related family members, are strictly prohibited on ThetaSpace. This includes any content that directly or indirectly references incestuous relationships.
 - **Family-Related Role-Plays:** To ensure compliance with our payment processor Patreon’s policies, we prohibit any form of family-related role-play. This extends to all scenarios involving step-family relations, in-law relations, and any other family dynamics, whether or not they are blood-related.
 - **Relationships of Power:** Relationships involving power dynamics, like guard-inmate, are allowed given our platform's virtual nature.
 
@@ -69,11 +69,11 @@ Characters from media targeted toward children or teenagers are allowed with the
 ## 9. Advertisement And Promotion
 
 - **Prohibition of Link Sharing:**  
-  Sharing any form of external links is strictly prohibited across the Openroleplay website and all community platforms. This includes but is not limited to links to other websites, social media profiles, product pages, or any form of online content.
+  Sharing any form of external links is strictly prohibited across the ThetaSpace website and all community platforms. This includes but is not limited to links to other websites, social media profiles, product pages, or any form of online content.
 
 - **No Promotions or Advertisements:**
-  Users are not permitted to promote or advertise products, services, or any commercial ventures on any of Openroleplay's platforms. This rule applies to both direct and indirect forms of promotion.
+  Users are not permitted to promote or advertise products, services, or any commercial ventures on any of ThetaSpace's platforms. This rule applies to both direct and indirect forms of promotion.
 
-Respecting everyone's rights and dignity is fundamental to our community at Openroleplay.AI. We ask all users to carefully follow these rules to create a safe and respectful environment.
+Respecting everyone's rights and dignity is fundamental to our community at ThetaSpace.AI. We ask all users to carefully follow these rules to create a safe and respectful environment.
 It's very important to stick to these rules to keep our community friendly and respectful. If you don't follow these rules, your account might be suspended or even closed. Please let us know if you see any content or actions that break these rules.
-Working together is crucial to keep Openroleplay.AI a safe, fun, and respectful place for everyone. Thanks for helping to keep our community strong and positive! Let's work together to build a place where everyone can be creative and respect each other's well-being and dignity in the Openroleplay community.
+Working together is crucial to keep ThetaSpace.AI a safe, fun, and respectful place for everyone. Thanks for helping to keep our community strong and positive! Let's work together to build a place where everyone can be creative and respect each other's well-being and dignity in the ThetaSpace community.
