Change email from ThetaSpaces3 to ThetaSpace

--- a/apps/web/app/dmca/content.mdx
+++ b/apps/web/app/dmca/content.mdx
@@ -9,7 +9,7 @@ Misrepresentations of infringement can result in liability for monetary damages.
 ```
 Copyright Agent
 Empty Canvas
-dmca@ThetaSpaces3email
+dmca@ThetaSpaceemail
 ```
 
 ## DMCA notice requirements
@@ -23,13 +23,13 @@ You must include:
 5. A statement by you that you have a good faith belief that the disputed use of the material is not authorized by the copyright owner, its agent, or the law; and
 6. A statement by you, made under penalty of perjury, that the above information in your notice is accurate and that you are the copyright owner or are authorized to act on the copyright owner's behalf.
 
-Submissions under this DMCA Policy should be sent to dmca@ThetaSpaces3email.
+Submissions under this DMCA Policy should be sent to dmca@ThetaSpaceemail.
 
 We will review your submission and take whatever action we deem appropriate under the DMCA, including the removal of the challenged content from the website.
 
 ## DMCA Counter Notice requirements
 
-The owner of the allegedly-infringing content may submit a DMCA Counter-Notice to dmca@ThetaSpaces3email. The Counter-Notice must comply with the requirements of the DMCA, and must include the following:
+The owner of the allegedly-infringing content may submit a DMCA Counter-Notice to dmca@ThetaSpaceemail. The Counter-Notice must comply with the requirements of the DMCA, and must include the following:
 
 1. Your physical or electronic signature;
 2. Identification of the material that has been removed or to which access has been disabled and where the material was located online before it was removed or access to it was disabled;
