Change to ThetaSpace2 to ThetaSpace

--- a/apps/web/app/safety/content.mdx
+++ b/apps/web/app/safety/content.mdx
@@ -6,7 +6,7 @@ import {
 
 # Safety
 
-At ThetaSpaces2, we recognize the power of AI and are committed to using it responsibly. We have clear rules to protect children, respect people's privacy, and prevent harmful or illegal content.
+At ThetaSpace, we recognize the power of AI and are committed to using it responsibly. We have clear rules to protect children, respect people's privacy, and prevent harmful or illegal content.
 
 Our goal is to let people be creative and use AI in new ways, but we must also keep vulnerable groups safe. It's against our rules to make photorealistic images of children or show extreme or illegal things. We also don't allow people to use our AI to make content that is violent, hateful, or disrespectful.
 
@@ -148,7 +148,7 @@ Portraying real people in any mature or suggestive context is strictly prohibite
 
 ### Q: I am the real person or a legal representitive of the real person displayed in these images. I did not consent to the use of my likeness, can they be taken down?
 
-**A:** We care a lot about the rights of individuals and the use of their likeness. If you find an image thats depicting your likeness you can request to have removed by emailing us at help@ThetaSpaces2.
+**A:** We care a lot about the rights of individuals and the use of their likeness. If you find an image thats depicting your likeness you can request to have removed by emailing us at help@ThetaSpace.
 
 ### Q: Are there any restrictions on using AI to create child-like models?
 
