Change "ThetaSpaces1" etc to "Theta Space"

--- a/apps/web/app/dmca/content.mdx
+++ b/apps/web/app/dmca/content.mdx
@@ -1,6 +1,6 @@
 # DMCA Policy
 
-We will respond to legitimate requests under the Digital Millennium Copyright Act ("DMCA"), and we retain the right to remove user content on ThetaSpaces1 that we deem to be infringing the copyright of others. If you become aware of user content on ThetaSpaces1 that infringes your copyright rights, you may submit a properly formatted DMCA request (see 17 U.S.C. § 512) to ThetaSpaces1.
+We will respond to legitimate requests under the Digital Millennium Copyright Act ("DMCA"), and we retain the right to remove user content on Theta Space that we deem to be infringing the copyright of others. If you become aware of user content on Theta Space that infringes your copyright rights, you may submit a properly formatted DMCA request (see 17 U.S.C. § 512) to Theta Space.
 
 Misrepresentations of infringement can result in liability for monetary damages. You may want to consult an attorney before taking any action pursuant to the DMCA. A DMCA request can be sent to us via the contact information below:
 
@@ -34,11 +34,11 @@ The owner of the allegedly-infringing content may submit a DMCA Counter-Notice t
 1. Your physical or electronic signature;
 2. Identification of the material that has been removed or to which access has been disabled and where the material was located online before it was removed or access to it was disabled;
 3. A statement by you, under penalty of perjury, that you have a good faith belief that the material was removed or disabled as a result of mistake or misidentification of the material to be removed or disabled; and
-4. Your name, address, and telephone number, and a statement that you consent to the jurisdiction of the federal district court for the judicial district in which the address is located, or if your address is outside of the United States, for any judicial district in which ThetaSpaces1 may be found, and that you will accept service of process from the person who provided notification under DMCA 512 subsection (c)(1)(c) or an agent of such person.
+4. Your name, address, and telephone number, and a statement that you consent to the jurisdiction of the federal district court for the judicial district in which the address is located, or if your address is outside of the United States, for any judicial district in which Theta Space may be found, and that you will accept service of process from the person who provided notification under DMCA 512 subsection (c)(1)(c) or an agent of such person.
 
 We will review the counter-notice, and:
 
 - if the counter-notice doesn't satisfy the DMCA requirements, we'll request a revised submission; or
 - if the counter-notice is complete and valid, we'll forward the counter notice to the person who filed the original takedown notice, advising that the challenged content will be reinstated within 10-14 business days, unless we receive a notification that the copyright owner is seeking a court order regarding this matter
 
-It is ThetaSpaces1's policy to close the accounts of users we identify as repeat infringers. We apply this policy at our discretion and in appropriate circumstances, such as when a user has repeatedly been charged with infringing the copyrights or other intellectual property rights of others.
+It is Theta Space's policy to close the accounts of users we identify as repeat infringers. We apply this policy at our discretion and in appropriate circumstances, such as when a user has repeatedly been charged with infringing the copyrights or other intellectual property rights of others.
