--- a/apps/web/app/safety/content.mdx
+++ b/apps/web/app/safety/content.mdx
@@ -16,7 +16,7 @@ Together, we can use AI to create something new and exciting while respecting ea
 
 ## Content Policies
 
- ThetaSpaces1 is committed to creating a safe, inclusive, and respectful environment for everyone. We are dedicated to harnessing the potential of AI responsibly, prioritizing the safety and wellbeing of minors and identifiable individuals. This content rule is inspired by [CivitAI](https://civitai.com/safety).
+ Theta Space is committed to creating a safe, inclusive, and respectful environment for everyone. We are dedicated to harnessing the potential of AI responsibly, prioritizing the safety and wellbeing of minors and identifiable individuals. This content rule is inspired by [CivitAI](https://civitai.com/safety).
 
 ## Minors
 
@@ -132,7 +132,7 @@ Portraying real people in any mature or suggestive context is strictly prohibite
 
 ### Q: What if my resource is of an adult-film star, who regularly appears in more revealing clothing?
 
-**A:** Great point, but here's the distinction. Those individuals consented to being filmed and depicted in certain ways. Here on ThetaSpaces1, we want to ensure we respect everyone's consent, regardless of their profession.
+**A:** Great point, but here's the distinction. Those individuals consented to being filmed and depicted in certain ways. Here on Theta Space, we want to ensure we respect everyone's consent, regardless of their profession.
 
 ### Q: My resource is meant to depict a character, like Jack Reacher, but it's trained on Tom Cruise and Alan Ritchson. So can I not do NSFW content of the character?
 
@@ -162,7 +162,7 @@ Portraying real people in any mature or suggestive context is strictly prohibite
 
 **A:** Of course! We value your input. After all, this community is like a potluck – everyone brings something to the table. If you have suggestions for improving the guidelines or have spotted something we might have missed, please let us know by reaching out to us on Discord.
 
-Remember, these guidelines are here to make sure that ThetaSpaces1 remains an innovative, respectful, and constructive community. With your cooperation and input, we can continue to make this community a shining example of how AI can be harnessed responsibly and creatively.
+Remember, these guidelines are here to make sure that Theta Space remains an innovative, respectful, and constructive community. With your cooperation and input, we can continue to make this community a shining example of how AI can be harnessed responsibly and creatively.
 
   </CollapsibleContent>
 </Collapsible>
